// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > renders correctly prominence default 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly prominence strong 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #ffffff;
  background: #151a2d;
  border: 1px solid #151a2d;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment danger 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #b3144d;
  background: #ffebf2;
  border: 1px solid #ffebf2;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment info 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #005da3;
  background: #e0f2ff;
  border: 1px solid #e0f2ff;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment neutral 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment primary 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment secondary 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #ac22e7;
  background: #f9ebff;
  border: 1px solid #f9ebff;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment success 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #22674e;
  background: #daf6ec;
  border: 1px solid #daf6ec;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly sentiment warning 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #7c5400;
  background: #fff6e6;
  border: 1px solid #fff6e6;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly size large 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 1rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 2rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly size medium 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly size small 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.625rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.5rem;
  gap: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly when disabled 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #727683;
  background: #e9eaeb;
  border: none;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;

exports[`Badge > renders correctly with icon 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 1rem;
  padding: 0 0.75rem;
  gap: 0.5rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 1.5rem;
  text-transform: uppercase;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

.emotion-3 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-3 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <span
      class="emotion-0 emotion-1 emotion-2"
    >
      <svg
        class="emotion-3 emotion-4"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M8 2.3125C4.85888 2.3125 2.3125 4.85888 2.3125 8C2.3125 11.1411 4.85888 13.6875 8 13.6875C11.1411 13.6875 13.6875 11.1411 13.6875 8C13.6875 4.85888 11.1411 2.3125 8 2.3125ZM1 8C1 4.13401 4.13401 1 8 1C11.866 1 15 4.13401 15 8C15 11.866 11.866 15 8 15C4.13401 15 1 11.866 1 8ZM7.34375 5.35677C7.34375 4.99433 7.63756 4.70052 8 4.70052H8.00529C8.36772 4.70052 8.66154 4.99433 8.66154 5.35677V5.36206C8.66154 5.72449 8.36772 6.01831 8.00529 6.01831H8C7.63756 6.01831 7.34375 5.72449 7.34375 5.36206V5.35677ZM7.55734 8.12213C7.28751 8.1578 7.01294 8.02195 6.88439 7.76484C6.7223 7.44066 6.8537 7.04647 7.17787 6.88439L7.20711 6.86976C8.11256 6.41704 9.13206 7.23485 8.88653 8.21695L8.44266 9.99246C8.71249 9.95679 8.98705 10.0926 9.11561 10.3497C9.2777 10.6739 9.14631 11.0681 8.82214 11.2302L8.79289 11.2448L8.79289 11.2448C7.88744 11.6975 6.86794 10.8797 7.11347 9.89764L7.55734 8.12213Z"
          fill-rule="evenodd"
        />
      </svg>
      Sample badge
    </span>
  </div>
</DocumentFragment>
`;
